--- a/Biz/ユニコーン企業のひみつ.md
+++ b/Biz/ユニコーン企業のひみつ.md
@@ -1,3 +1,39 @@
+## 感想
+2021年の本
+必ずしもSpotifyのモデルが通用するわけではないが、自分やチームの仕事に対する取り組み方の見方が変わる。
+もう少し勇気をもって会話すればよかった。
+
+
+- 新規開発の取り組み方について
+新規開発ではプロジェクトの形式にこだわる必要はなさそうだ。
+また、トップダウンでやる必要もない。
+ミッションを意識すれば動ける。
+計画を意識せずに、顧客への価値を考えることに意味があると、僕は信じる。
+
+自分の失敗談として、企画を１つ作るという計画を意識しすぎて、どうしたらいいんだろうと悩むことが多かった。
+どういうミッションだったら自分はやっていけるか、考えていける。
+
+ただ、エンタープライズ企業にいる以上、予算はあるし、プロジェクトもあるし、という状態。
+
+その中でいかに自分たちのチームをスタートアップのように動かしていけるかを考える。
+
+フィーチャーフラグとリリーストレインによる開発は顧客の価値に貢献できそう。
+
+- 今やるべきこと
+とりあえず製品を作り、メンテンナンスをすることで学びを得ることができる。
+
+
+- 目標設定
+SpotifyはOKRをやめたらしい。Objective & Key Results→OKRの設定の落とし込みがコスト大きいらしい。
+https://note.com/katoshow/n/n3519f7275571
+
+
+- 気づいた今の課題
+検証してもらうけど、実際に価値が出たのかは別途計測しないと出てこない。
+
+
+
+
 ## メモ
 ### スタートアップはどこが違うのか。
 スタートアップはイテレーションを重ねる。
@@ -20,5 +56,289 @@
 
 スタートアップはスピード以上に学習を重要視している。
 どうすれば競合に打ち勝てるのか考えている。
+イテレーションを重ね、開発者に対して権限を与える。
 
-エンタープライズ企業では、生産性の向上と業務の効率化
+スタートアップやテック企業はプロダクトの開発力と顧客へのサービス提供能力で生死が決まる。
+
+
+エンタープライズ企業では、システム開発の名目は生産性の向上と業務の効率化になる。
+実際新規プロダクト開発の世界と社内業務システム開発の世界が衝突している。
+エンタープライズ企業も新規プロダクトや新規サービスで対応しなければならないが、スピードとペースには慣れていない。
+
+
+スタートアップは顧客にフォーカスしていて、市場にあるギャップの見極めが得意である。
+
+エンタープライズ企業の過ち
+1. プロダクト開発を社内業務システム開発と同じように扱ってしまう。
+2. チームに十分な自律性と信頼を与えない。
+
+エンタープライズ企業では計画通りに進めることが評価される。
+
+
+|エンタープライズ|スタートアップ|
+|--|--|
+|内向き|外向き|
+|計画に従う|学習する|
+|既存業務の自動化|新規プロダクト開発|
+|未知が少ない|未知が多い|
+|プロジェクト駆動|プロダクト駆動|
+|一回限り|リリースを重ねていく|
+|納期と予算|顧客とインパクト|
+|トップダウン|ボトムアップ|
+|弱い権限と信頼|強い権限と信頼|
+|計画に忠実|計画を生み出す|
+
+
+ソフトウェアデリバリーは、これまでに思いつかなかった新規プロダクトや新規サービス、機能を「発見」するための手段である。
+
+プロダクト開発は社内業務システム開発とは全く別のゲームである。
+
+
+
+1. 成功を再定義する。
+   1. 発見と学習
+2. 学習とｈ何であるかを心得る。
+   1. 「問い」から始める
+3. 未知の状況でもうまくやっていける人材を探す。
+4. 失敗してはいけないという思い込みを払しょくする。
+5. 権限を与え、信頼することで仕事をやり遂げる。
+
+
+__現状打破必ず困難なものである。__
+
+
+__ミッション__ を重要視する。
+
+### ミッション
+テック企業はプロジェクトではなく、ミッションで目的を与える。
+
+プロジェクトの問題点
+1. 期間が短い
+2. フィードバックの機会が少ない
+3. プロジェクトの融通が利かない
+4. プロジェクトは力を奪う。
+5. プロジェクトは間違ったことにフォーカスしている。
+   1. 本当に意味があることは、顧客が欲しいと思うものを作ること。
+
+ミッションは抽象度の高い目標
+Spotifyの例としては下記のようなミッションが挙げられていた。
+- 新しい音楽を簡単に見つけられるようにする。
+- リビングルームを制する。
+- 朝の通勤のお供になる。
+ミッションはプロダクトではなくともよい。
+- ほかのエンジニアリングチームがもっと速く進めるようにする。
+- クラウドストレージの設定を簡単にする。
+- 会社の株式公開準備を整える。
+  
+ミッションによるメリット
+- チームの自発性を高める。
+- 目的を意識させる。
+- 仕事そのものにフォーカスさせる。
+
+|プロジェクト|ミッション|
+|--|--|
+|終わりがある|期間に定めがない|
+|短期間|長期間|
+|プロジェクトマネージャーがいる|プロジェクトマネージャーがいない|
+|開発だけして引き継ぐ|開発もメンテナンスもする|
+|完成したら解散する|チームは一緒のまま|
+|計画にフォーカス|顧客にフォーカス|
+|期待に応じることが価値|インパクトが価値|
+|トップダウン|ボトムアップ|
+
+チームは自分たちで自分たちの仕事を生み出す。
+何を作る必要があるのかを決めるのはチームである。
+
+ユーザーストーリを一緒に作っていく。
+
+
+### スクワッド
+スクワッド：少人数の、自律した、必要な権限を持ったチーム @Spotify
+デリバリーするプロダクトの隅々まですべてに責任を持つメンバーがそろったチーム
+- 作ったものを自分たちでメンテナンスする。
+- 自分たちで自分たちの仕事を生み出す。
+→Henrik Knibergという素晴らしい解説動画がある。
+
+エンタープライズ企業のアジャイルとは、権限と信頼が段違いであること。
+
+学びはメンテナンスのなかにある。
+
+
+スクワッドは計画よりもインパクトを重視する。
+例として
+- 新規登録数は？
+- MAUは？
+- リテンションは？
+- NPSは？
+- 音楽のトレンドは？
+- リリースまでの速度は？
+
+指標にフォーカスすることで余計な心配事を減らす。
+
+
+スクワッドは最初のバージョンが正しくないと心得ている。
+スクワッドは自律している。
+スクワッドはは手を動かすメンバーだけで構成される。
+
+プロダクトマネージャー：物事を最後まで見届けられる能力を備えた推進役
+データサイエンティスト：データを使って意思決定をするように支援する。
+
+Spotifyは巨大なモノリスだったが、小さなパーツに分割した。
+
+経営リーダーのためのヒント
+- チームに発奮興起してもらう。
+- チームに間違えてもらう。
+- 「間違え」に備えよう
+- 楽しい名前を選んでもらおう。
+
+### チーム編成
+
+トライブ：担当するミッションが類似、関連しているスクワッドがまとまったもの→これ自体がミニ企業のような形
+チャプター：同じ専門性を持つメンバーで構成される。
+ギルド：同じ専門分野に興味のあるメンバーからなるグループ→公式なものではない。
+
+トライブの原則
+- スクワッド第一
+- サーバントリーダー
+- ミッションが肝心
+- ミッション特化の古スタック編成
+- 人数は重要
+- トライブ内での異動はOK
+
+意思決定をできるだけ現場に任せることが自己組織化につながる。
+スクワッド→何を　にフォーカス
+チャプター→どうやって　を手助けする
+
+### Bet
+2014年Spotifyは重要な物事を進められない状態にあった。
+カンパニーベット：会社が取り組みたい重工事項を、終わらせたい順に並べたリスト
+全社レベルでフォーカスを絞るために一度に取り組むことを少なくするというもの
+
+DIBBという考え方
+意思決定や議論に使われる
+- Data：イテレーションの対象となるプロダクトやコンテンツ、ビジネスモデルらを示すデータ
+- Insight：現実のデータから導き出された見解や、結論、または学んだこと
+- Belief：チームに対して向かうべき方向を示す。
+- Bet：実際にテストすることに決めた確信
+
+
+反直感的Bet
+
+|企業|反直感的Bet|
+|--|--|
+|Netflix|郵送DVDレンタル、ストリーミング|
+|Airbnb|他人に自宅のソファを貸し出す|
+|Twitter|140文字だけかける|
+|Starbucks|コーヒー1杯で7ドル|
+|Spotify|違法コピーよりも便利に|
+
+
+### テック企業で働くということ
+
+何をすべきかは自分で考える。
+資金を投入すれば競争に勝てるなら、喜んでそうしよう。
+
+- とても自律している
+- とても自由度が高い
+- 責任は重い
+- 何をすべきかを直接指示する人はいない
+- すべての情報は基本的にオープン
+
+
+### 生産性向上に投資する。
+
+テック企業ではやすやすと生産性が向上されていく。
+
+例えばプロダクトのリリースや開発を担当するメンバーの日々の仕事を楽にすることだけを目的としたチームはいる。プロダクティビティスクワッドと呼ばれる。ビルドの自動化や、CIの基盤整備とか
+
+技術に明るいプロダクトオーナーを活用する。
+
+
+品質に高い期待を持つ。
+
+Spotifyでは2011年内部のシステムが大量のユーザーによって耐えきれていなかった。
+よって、2年間は新機能なしにシステムにささげた。
+
+
+
+フィーチャーフラグ：新機能をフィーチャーフラグで隠す
+リリーストレイン：完成した機能のまとまいを、あらかじめ決められた感覚で定期的にリリースするプラクティス
+
+フィーチャーフラグとリリーストレインという考え方を入れるとよさそう。
+
+### データから学ぶ
+
+1. どこにでもデータがある。
+2. プロダクトを計測する
+3. A/Bテスト
+   1. データが大量にないとあんまり意味がない
+4. データサイエンティスト
+5. データを活用する
+
+### 文化
+
+会社が異なると文化も異なる。
+Appleの牛の絵がとてもよい。
+
+
+核となる信念
+- なにものであるかよりも何者になれるか
+  - 速く学んだものが勝つ。
+  - これはマラソン。
+  - 強いチームは強い個人を凌駕する。
+- 異なる観点の衝突が大きな躍進を起こす
+
+エンジニアリングの信念
+- 慎重で思慮深い要件収集よりも、学習と実行のスピードを重視する。
+- イテレーションを短くするほど、学習は早くなり、価値は早く実現し、品質も高まる。
+- 世界に誇る技術は少ないほうが早く進む。
+- 権限の与えられた小さな職能横断チームが素早いプロダクト開発の基盤
+- 強いチームは常にロックスターを打ち負かす
+- 知識や実績、経験よりも、学習能力と適応能力が重要だ。
+- あらゆるデータにアクセスできれば、人はすぐれた意思決定をくだせる。
+
+Amazonも求める人材像は文化に焦点をあてている
+
+行動は言葉に勝る。
+
+
+スウェーデンはトップダウンの意思決定者を特別視する北米と異なり、ボトムアップの合意形成による意思決定をもっと大切にしている
+
+### スウェーデンっぽさ
+- 合意形成
+- ボスであってボスじゃない
+- いい感じの職場
+  - Fika：チーム単位のコーヒーブレイク
+- ワークライフバランス：ラーゴム
+  - 多すぎず、少なすぎず、ちょうどいい。
+- 話すよりも聞く
+
+ヤンテの掟
+1. 自分をひとかどの人物だと思ってはならない
+2. 自分のことを、みんなと同じだと思ってはいけない
+3. 自分のことを、みんなよりも頭が良いと思ってはならない
+4. 自分のことを、みんなよりもすぐれていると自惚れてはならない
+5. 自分のことを、みんなよりも物知りだと思ってはならない
+6. 自分のことを、みんなよりも重要だと思ってはならない
+7. 自分のことを、みんなよりも何かがうまいと思ってはならない
+8. みんなの事を笑ってはならない。
+9. みんなが自分のことを気にかけているとおもってはならなない。
+10. みんなに何かを教えられると思ってはならない
+    
+
+# どこから手を付けるか
+1. 目的で動機づける
+   1. AppleのCEOになったJohn Sculley
+      1. 「このまま、一生砂糖水を売って過ごすのか？世界を変えたいとは思わないのか？」
+2. 思考は戦略的に、行動は局所的に
+   1. 『米海軍で屈指の潜水艦艦長による最強組織の作り方
+3. プロジェクトではなく、チームに投資する
+4. 技術を一級市民として扱う
+5. もっとスタートアップみたいにふるまう
+6. 自律した小さなチームとともに
+7. コンテキストも併せて取り入れる
+8. 率先垂範のリーダシップ
+9. 権限を与え、信頼する
+10. 言い訳を取り除く
+
+
