--- a/Tech/なっとく!関数型プログラミング/感想メモ.md
+++ b/Tech/なっとく!関数型プログラミング/感想メモ.md
@@ -13,4 +13,95 @@
 
 __関数型プログラミングでは、関数の本体よりもシグネチャに焦点を合わせる傾向にある。__
 
+シグネチャと本体で内容が異なることがある。
+
+| 命令型                                       | 宣言型               |
+| -------------------------------------------- | -------------------- |
+| 結果をどのように計算すべきかに焦点を合わせる | 何を行う必要があるか |
+| 関数の名前は動詞で                           | 関数の名前は名詞で   |
+
+宣言型のアプローチを用いる。
+
+```Java
+public static int calculateScore(String word) {
+    int score = 0;
+    for (char c: word.toCharArrray()) {
+        score++;
+    }
+    return score;
+}
+public static int wordScore(String word) {
+    return word.length();
+}
+// これを変化させる。
+
+public static int calculateScore(String word) {
+    int score = 0;
+    for (char c: word.toCharArrray()) {
+        if(c != 'a') score++;
+    }
+    return score;
+}
+public stati int wordScore(String word) {
+    return word.replace("a", "").length();
+}
+
+calculateScore("imperative") == 9
+calculateScore("no") == 2
+wordScore("declarative") == 9
+wordScore("yes") == 3
+
+```
+
+関数型プログラミングのメリット
+- シグネチャが嘘をつかない
+- 本体が極力宣言的である
+
+Scala：関数型プログラミングの機能をすべえｔ備えているが、構文は主流の命令型言語に似ている。
+sbt：Scalaエコシステムのビルドツール
+
+REPL：Read-Evaluate-Print Loop
+コードを入力するとすぐにフィードバックが返される。
+
+取り組み方
+- 練習問題を解く
+- 学ぶための空間を作る
+- 急がない
+- コードを書く、それも大量に
+
+## 純粋関数
+嘘をつかない関数＝信頼できる関数
+嘘をつかない関数の中でも最も信頼できるのは __純粋関数__ である。
+
+データのコピーを渡すことが、関数型プログラミングで行う基本的なことの1つである。
+関数型のソリューションとしてはロジックに焦点を当てて、状態をなくすことがある。
+
+__関数型プログラミングでは関心事を別々の関数に分離する。__
+
+3つの特徴の違い
+- 命令型
+  - 関数が値を返さない
+  - 関数が既存の値を変更する
+  - 関数が引数以外のものを使って計算する
+- 関数型
+  - 関数の戻り値は常に1つだけ
+  - 関数は引数にのみ基づいて戻り値を計算する
+  - 関数は既存の値を変更しない
+
+純粋関数は関数型プログラミングの土台である。
+
+数学関数は純粋である。
+
+1. 関数の戻り値が1つだけ
+2. その引数にのみ基づいて戻り値を計算する
+3. 既存の値を変更しない
+
+純粋関数とクリーンなコード
+1. 単一責任
+2. 副作用がない
+3. 参照透過性
+   1. 関数が引数だけを使って値を計算し、既存の値を変更しない場合、その関数は自動的に参照透過性を持つ。
+
+ScalaのListはイミュータブル
+
 
