--- a/Tech/マイクロサービスアーキテクチャ.md
+++ b/Tech/マイクロサービスアーキテクチャ.md
@@ -5,6 +5,11 @@
 技術選定の際の考え方の一つとして利用したい。
 小さなアプリケーションでは出る機会が少ないような気がしている。
 
+### 進化的アーキテクトの章
+あまりイメージがわかなかった。
+アーキテクトとしての理想的なあり方があるよというのだけわかった。
+
+
 ## メモ
 
 マイクロサービスは、連携して動作する独自のライフサイクルを備えた粒度の細かいサービスの利用を促進する、分散システムへの取り組み
@@ -79,6 +84,98 @@ CD：ソフトウェアをより効果的かつ効率的に本番環境にデプ
       - 共有ライブラリと同様の問題を持つ。
 
 銀の弾丸はないらしい。
+
+
+### 進化的アーキテクト
+アーキテクトの役割は変化する。
+通常の建築士と比べてユーザーの要件に柔軟に合わせる必要がある。
+
+アーキテクトは完璧な最終製品を作成するという考え方を変え、代わりに適切なシステムが得られるようなフレームワークを作成することに重点をおき、さらに学んで成長を続ける必要がある。
+
+ただし、ITアーキテクトは都市計画家と似ている。
+
+アーキテクトはコーディングするとよりよい。
+
+
+原則に基づいたアプローチ
+　規則は愚者が従うべきもので、賢者の手引きである。
+
+- 戦略的目標
+  - 戦略的目標は組織が目指す方向性なので、技術がその目標に一致するようにする必要がある。
+- 原則
+  - 実行することを大きな目標に一致させるために作成した規則である。
+  - 時々変更される。
+- プラクティス
+  - 原則を確実に実行する方法
+  - タスクを実行するための詳細で実用的な一連の指針
+- 原則とプラクティスの結合
+- 実世界の例
+
+
+|戦略的目標|アーキテクチャ上の原則|設計とデリバリのプラクティス|
+|--|--|--|
+
+- スケーラブルなビジネスを可能にする
+  - 顧客と取引の増加
+  - 顧客へのセルフサービス
+- 新しい市場への参入のサポート
+  - 柔軟な運用プロセス
+  - 新製品と運用プロセス
+- 既存市場での革新のサポート
+  - 柔軟な運用プロセス
+  - 新製品と運用プロセス
+
+- 惰性の削減
+- 予想外の複雑さの排除
+- 一貫性のあるインタフェースとデータフロー
+- 銀の弾丸などない
+
+
+設計とデリバリのプラクティス
+- 標準のREST/HTTP
+- レガシーのカプセルか
+- 統合データベースの排除
+- データの統合とクレンジング
+- 公開された統合モデル
+- 小規模な独立サービス
+- 継続的デプロイ
+- 商用製品/SaaSの最小限のカスタマイズ
+
+必要な標準
+- 監視
+  - すべてのサービスで健全性と一般的な監視関連のメトリックを同じように出力するとよい。
+- インタフェース
+  - 少数の定義済みインタフェース技術がよいらしい。
+- アーキテクチャ上の安全性
+  - 不健全な下流呼び出しから適切に身を守る
+  - 適切なレスポンスコード
+
+
+手本とサービステンプレート
+
+### サービスのモデル化方法
+優れたサービス
+- 疎結合
+  - 連携するサービスに対して最低限のことだけしかしないよ。
+- 高凝集性
+  - 関連する振る舞いを一緒にし、関連のない振る舞いは別の場所に配置したい
+境界付けられたコンテキスト
+- どのドメインも複数の境界づけられたコンテキストからなり、それぞれの境界づけられたコンテキストには外部と通信する必要のないものと、外部の他の境界づけられたコンテキストと共有されるものがある。
+- 「細胞膜が内外を分け、通過できるものを決めているので、細胞が存在できます。」
+- 共有モデルと隠れモデル
+- モジュールとサービス
+
+# 統合
+1. 理想的な統合技術の探索
+   1. 破壊的変更を回避する
+   2. APIを技術非依存にする
+   3. コンシューマにとって単純なサービスにする
+   4. 内部の実装詳細を隠す
+2. 顧客とのインタフェース
+3. 共有データベース
+
+
+
 
 
 
