--- a/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
+++ b/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
@@ -58,3 +58,81 @@ Twitter のポスト処理
 1. 運用性
 2. 単純性
 3. 進化性
+
+# データモデルとクエリ言語
+データモデル：問題に対する考え方に対して、極めて重大な影響力を持っている。
+
+## リレーショナルモデルとドキュメントモデル
+
+1. リレーショナルデータベース
+   1. ビジネスデータの処理が期限
+   2. クリーンなインターフェースによって背後の実装の詳細を隠蔽すること
+2. NoSQL
+   1. リレーショナルモデルの支配を終わらせようとする試み
+   2. 極めて巨大なデータセットや優れた書き込みのスループット
+   3. リレーショナルなスキーマの製薬に対するフラストレーション
+
+## オブジェクトとリレーショナルのミスマッチ
+多くのアプリケーション開発はオブジェクト指向で行われている。
+インピーダンスマッチと呼ばれるデータ・ベースモデルのために変換レイヤーが必要になる。
+
+ドキュメントのような構造モデルにはJSONが適している。
+
+多対一と多対多の関係には正規化が鍵となるが、ドキュメントモデルよりもリレーショナルモデルが向いている。
+
+過去にはこの関係によってリレーショナルモデル vs ネットワークモデルの論争があった。
+ネットワークモデルは階層モデルであった。ツリー構造では、アクセスパスへの変更点が難しかった
+リレーショナルモデルは変更が簡単。
+
+ドキュメントデータベースでは、階層モデルにはあるが、多対多の関係の表現という点ではリレーショナルとドキュメントであまり差異はない。
+リレーショナルでは外部キー、ドキュメントではドキュメント参照と呼ばれる
+
+ドキュメント：スキーマオンリード→コレクションの中のアイテムの構造が統一されていない場合にメリットがある。
+リレーショナル：スキーマオンライト
+
+## データのためのクエリ言語
+SQL：宣言的
+IMS/CODASYL：命令的
+
+SQLでは家庭に注目せず、結果を重要視する。
+クエリの順序はクエリオプティマイザの判断に委ねられる。
+
+宣言的なほうが命令的なものより使いやすい
+
+## グラフ型のデータモデル
+
+多対対のものであれば、グラフモデルが適している。
+
+### プロパティグラフ
+頂点
+- ユニークな識別子
+- 外向きの辺の集合
+- 内向きの辺の集合
+- プロパティのコレクション
+辺
+- ユニークな識別子
+- 始点
+- 終点
+- 2つの頂点感の関係の種類を示すラベル
+- プロパティのコレクション
+
+### Cypherクエリ言語
+例えば、グラフデータ・ベースによってアメリカからヨーロッパへ移住したすべての人々の名前を返すとする。
+この場合、Cyperクエリであれば4行で書けるが、SQLだと29行ほどになる。
+
+### トリプルストア
+
+トリプルストアモデル：プロパティグラフと同じであるが、同じ概念を異なる用語で表現している。
+トリプルストアでは、すべての情報は非常にシンプルな3つの部分からなる言明（主語、述語、目的語）の形で保存される。
+例
+-:lucy a :Person
+-:lucy :name "Lucy"
+-:lucy :bornIn _:idaho
+
+トリプルストアはセマンティックWebと密接な関係性を持つ。
+
+
+## まとめ
+ドキュメントデータベース：データが自己完結しているドキュメント群で、ドキュメント間の関係がそれほど存在しないようなユースケースをターゲット
+グラフデータベース：潜在的にはあらゆるもの同士に関係が存在するようなユースケースをターゲット
+
