第3章:LSMツリーまで

--- a/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
+++ b/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
@@ -136,3 +136,61 @@ SQLでは家庭に注目せず、結果を重要視する。
 ドキュメントデータベース：データが自己完結しているドキュメント群で、ドキュメント間の関係がそれほど存在しないようなユースケースをターゲット
 グラフデータベース：潜在的にはあらゆるもの同士に関係が存在するようなユースケースをターゲット
 
+## ストレージと抽出
+データ・ベースがやらなければいけないこと
+1. 与えられたデータを保存すること
+2. データを要求されたら返すこと
+
+利用可能なストレージエンジンから自分のアプリケーションに適したエンジンを選択する必要がある。
+
+データ・ベースから特定のキーの値を効率的に見つけるために、別のデータ構造であるインデックスが必要になる。
+インデックスは読み出しのクエリを高速にするが、あらゆるインデックスは書き込みを低速にする。
+
+### ハッシュインデックス
+キーバリュー型のデータのためのインデックスー＞キーバリューストア
+データストレージにはファイルへの追記だけを行う
+インメモリのハッシュマップでは、すべてのキーに対してデータファイル中のバイトオフセットをマッピングする
+
+ログが増えたら、ログ中で重複しているキーを捨てて、それぞれのキーに対する最新の情報だけを残すコンパクション処理を実施する。
+
+キーに対する値の探し方
+1. 最新のセグメントのハッシュマップをチェックする。
+2. キーがなければ、二番目に新しいセグメントを探す
+3. 以降同様に処理を進める。
+
+検討事項
+- ファイルフォーマット
+- レコードの削除：データファイルに特別な削除レコードを追加する
+- クラッシュのリカバリ：インメモリのハッシュマップのスナップショットをディスク上に保存する
+- 部分的に書き込まれたレコード：チェックサム
+- 並行性の制御：ログへの書き込みは直列、読み取りは並行に可能
+
+追記のみのログは一見無駄があるように見えるが、利点がある。
+1. ランダムな書き込みよりも高速である
+2. 並行処理やクラッシュリカバリがシンプルになる
+3. フラグメンテーションを避けられる
+
+制約もある
+1. ハッシュマップが大きくなると扱えなくなる。
+2. 範囲に対するクエリの効率が良くない
+
+### SSTableとLSMツリー
+Sorted String Table: ソート済み文字列テーブル キーでソートされているセグメントファイル
+
+SSTableの構築
+- 書き込み要求が来たら、memtableと呼ばれるバランス度ツリーデータ構造に追加
+- memtableが大きくなったらディスクに書き出しを行う
+欠点としては、データベースクラッシュで直近の書き込みがうしなわれてしまう。
+ディスク上に別個のログをもっておくと、防げる。
+
+LSMツリー：Log-Structured Merge-Tree
+ソート済みのファイルのマージとコンパクションを基盤とするストレージエンジン
+
+パフォーマンスの最適化
+- ブルームフィルタとよばれる集合の内容についての概要を保持するメモリ効率の良いデータ構造を用いると、不要なディスクの読み取りを防げる
+- コンパクションとマージ順序とタイミングの決定で様々な戦略がある。
+  - サイズごとおよび階層ごとのコンパクションが考えられる。
+  - 
+
+
+
