--- a/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
+++ b/Tech/データ指向アプリケーションデザイン/データシステムの基礎.md
@@ -190,7 +190,48 @@ LSMツリー：Log-Structured Merge-Tree
 - ブルームフィルタとよばれる集合の内容についての概要を保持するメモリ効率の良いデータ構造を用いると、不要なディスクの読み取りを防げる
 - コンパクションとマージ順序とタイミングの決定で様々な戦略がある。
   - サイズごとおよび階層ごとのコンパクションが考えられる。
-  - 
 
+### Bツリー
+Bツリー：最も広く使われているインデックス構造
 
+Bツリーではキーと値のペアをキーでソートされた状態で保持する。
+が、SSTableと似ているのはこれだけ。
 
+Bツリーでは、固定サイズのブロックもしくはページに分割する。
+あるページから他のページへ参照できる。
+
+分岐係数：Bツリーにおける1ページ内の小ページへの参照係数　通常数百程度
+Bツリー内の既存のキーに板する値を更新したい場合は、キーを含むリーフページを検索し、そのページ内の値を更新してディスクに書き戻す
+
+新しいキーを追加したい場合は、そのキーの値を含む範囲を持つページを見つけ、そのページにキーを追加する必要がある。
+もし空き領域がない場合は、そのページを半分だけが埋まった2つのページに分割し親のページを配下にできた新しい2つのキーの範囲に合わせて更新する
+ツリーのバランスが保たれるので深さは常にO(log n)になる
+
+Bツリーの信頼性を高めるために、write-aheadログを用いる。
+複数のスレッドが同時にBツリーにアクセスする場合、注意して並行処理をしなければ、整合性が保たれない。
+そこで、ラッチでツリーのデータ構造を保護することで制御可能
+
+### BツリーとLSMツリー
+Bツリーは読み取りが高速、LSMツリーは書き込みが高速とみなされている
+
+LSMツリーの利点：書き込みのスループットを高く保てる。また、圧縮率を高めることができる。
+LSMツリーの欠点：コンパクションの処理が実行中の読み書きに影響がある。書き込みのスループットの高さでコンパクションに要するディスク容量が増えてしまう。
+
+Bツリーの利点：インデックスの中にキーが1箇所しか存在しないため、強いトランザクションが必要な場合魅力的である。
+Bツリーの欠点：書き込みでオーバーヘッドが生じる
+
+### その他のインデックス構造
+インデックスへの値の保存
+結果の値は探していた実際の行もしくはどこか別の場所に保存されている行の参照の2種類が考えられる。
+複数のセカンダリインデックスがある場合に、データ複製が避けられるため、ヒープファイルが使われる。
+
+クラスタ化インデックス：インデックスつけされた行を直接インデックス内に保存するインデックス　辞書ごとアルファベット順
+非クラスタ化インデックス：データへの参照だけをインデックス内に保存するインデックス　辞書の後ろにアルファベット順の索引
+
+複合インデックス
+標準的なBツリーやLSMツリーインデックスでは、効率的に二次元に対するクエリを回答できない。
+二次元の一を単一の数値に変換してから通常のBツリーインデックスを使う
+もしくは、Rツリーのような空間インデックスを使う方法がある。
+
+レーベンシュタインオートマトン：ある特定の許容範囲内での「近い文字列」を効率よく検索するためのツール
+検索エンジンやスペルチェック機能、オートコンプリートシステムなどで使われるらしい（生成AI調べ）
